--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,14 @@
 				<version>2.3</version>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</reporting>
 
